@@ -76,6 +76,9 @@ function debug($string)
 function warn($string)
 {
 	global $weathermap_map;
+	global $weathermap_warncount;
+	
+	$weathermap_warncount++;
 	
 	// use Cacti's debug log, if we are running from the poller
 	if (function_exists('cacti_log') && (!function_exists('show_editor_startpage')))
